--- a/frontend/src/styles/MedicareIndex.css
+++ b/frontend/src/styles/MedicareIndex.css
@@ -91,11 +91,10 @@
           justify-content: right;
           gap: 20px;
           background-color: #ffcc00;
-          padding: 10px;
+          padding: 5px;
           margin-left: 800px;
           border-radius: 50px;
 }
-
 .secondary-navbar a {
           text-decoration: none;
           color: black;
@@ -107,6 +106,8 @@
 
 .secondary-navbar a:hover {
           background: rgba(0, 0, 0, 0.1);
+          transition: 0.5s ;
+
 }
 
 /* Bookanappointment */
