--- a/frontend/src/styles/TopDoctors.css
+++ b/frontend/src/styles/TopDoctors.css
@@ -7,7 +7,7 @@
         
         .top-doctors-container {
           width: 100%;
-          max-width: 1200px;
+          max-width: 1400px;
           min-height: 400px;
           text-align: center;
           padding: 15px;
@@ -58,7 +58,7 @@
           gap: 20px;
         }
         
-        .doctor-card {
+        /* .doctor-card {
           background-color: #f9f9f9;
           border: 1px solid #ccc;
           border-radius: 8px;
@@ -66,17 +66,17 @@
           box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
           text-align: center;
         }
-        
-        .doctor-img {
+         */
+        /* .doctor-img {
           width: 100%;
           height: auto;
           border-radius: 8px;
         }
-        
-        .doctor-name {
+         */
+        /* .doctor-name {
           font-size: 1.2rem;
           margin: 10px 0;
-        }
+        } */
         
         .doctor-description {
           font-size: 0.9rem;
@@ -93,7 +93,7 @@
   background-color: #f9f9f9;
   border: 1px solid #ccc;
   border-radius: 8px;
-  padding: 15px;
+  padding: 25px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   overflow: hidden;
   text-align: left;
@@ -102,7 +102,7 @@
 .doctor-card img {
   width: 100px;
   height: 100px;
-  object-fit: cover;
+  /* object-fit: cover; */
   /* border-radius: 50%; */
   margin-right: 20px;
   flex-shrink: 0;
@@ -116,31 +116,41 @@
   justify-content: center;
 }
 
-.doctor-info h3 {
+/* .doctor-info h3 {
   margin: 0 0 8px;
   font-size: 1.2rem;
   color: #333;
-}
+} */
 
 .doctor-info p {
   margin: 4px 0;
-  font-size: 0.95rem;
-  color: #555;
+  font-size: 0.5rem;
+  color: black;
 }
 
-.doctor-info strong {
+/* .doctor-info strong {
   color: #222;
+} */
+
+.doctor-card-right {
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  /* align-items: flex-end; */
+  font-size: 0.85rem;
+  gap: 5px;
 }
 
 .appointment-btn {
   align-self: flex-start;
   background-color: #007bff;
   color: white;
-  padding: 1px;
+  padding: 4px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
   margin-top: 10px;
+  margin-left: 10px;
 }
 
 .appointment-btn:hover {
